# litigationspace-live

./: .gitignore  DESIGN_RULES.md  LitigationSpace-Control.ps1  MOOTED.txt  README.md  START.bat  cron_marketing.sh  server.js  smoke_test.py
backend/: legal_database_auto_discover.py  pyproject.toml
backend/app/: cases.py  database.py  main.py  schemas.py
backend/app/models/: schemas.py
backend/app/routers/: admin_analytics.py  auth.py  bench_marketplace.py  billing.py  cases.py  contact.py  documents.py  drafting.py  experts.py  features.py  growth.py  judicial.py  jurisdiction.py  legal_brain.py  motion_analyzer.py  notifications.py  outreach.py  signatures.py  support_chat.py  team.py  tracking.py  uscis.py  warroom.py  workflows.py
backend/app/services/: ai_client.py  caption_engine.py  document_processor.py  docx_builder.py  interest_calc.py  video_generator.py
backend/app/utils/: admin_config.py  auth.py  case_auth.py  credits.py  email.py  health.py  model_router.py  rag_engine.py  subscription.py  trial_emails.py
configs/: crontab.txt  litigationspace.service  nginx-litigationspace.conf
frontend/: index.html  sitemap.xml
frontend/assets/: index-B0s6DAO4.css  index-BC1mzK7Q.js  index-BF4Zhez_.js  index-BF__CXG-.js  index-BOmB-YiL.js  index-BRUGEgvL.js  index-BUIYToQy.js  index-B_UOLGNr.js  index-Ba9m_G8e.js  index-BgEEAA4O.js  (+21 more)
src-app/: CUsersDOROTHYoutreach_check.py  fix-home-colors.cjs  fix-home-colors.py  fix-home-v2.cjs  fix-pages-bg.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.local.config.ts
(+79 files in other folders)
